--- a/tests/integration/targets/podman_image/tasks/main.yml
+++ b/tests/integration/targets/podman_image/tasks/main.yml
@@ -152,6 +152,18 @@
           - specific_image2 is not changed
           - "'v3.3.11' in images.stdout"
 
+    - name: Get info about pulled image
+      containers.podman.podman_image_info:
+        executable: "{{ test_executable | default('podman') }}"
+        name: quay.io/coreos/etcd:v3.3.11
+      register: sha_image_info
+
+    - name: Pull image with SHA256 tag
+      containers.podman.podman_image:
+        executable: "{{ test_executable | default('podman') }}"
+        name: "quay.io/coreos/etcd@{{ sha_image_info.images.0.Digest }}"  #quay.io/coreos/coreos-installer:latest
+        state: present
+
     - name: Create a build directory with a subdirectory
       file:
         path: /var/tmp/build/subdir
