--- a/tests/integration/targets/podman_image/tasks/main.yml
+++ b/tests/integration/targets/podman_image/tasks/main.yml
@@ -265,6 +265,37 @@
           - "'Failed to find image bad_image' in bad_push.msg"
           - "'image pull set to False' in bad_push.msg"
 
+    - name: Pull an image for a specific CPU architecture
+      containers.podman.podman_image:
+        executable: "{{ test_executable | default('podman') }}"
+        name: docker.io/library/ubuntu
+        arch: amd64
+      register: pull_arch1
+
+    - name: Pull the same image but for another CPU architecture
+      containers.podman.podman_image:
+        executable: "{{ test_executable | default('podman') }}"
+        name: docker.io/library/ubuntu
+        arch: arm
+      register: pull_arch2
+
+    - name: Ensure the result of pulling image for another CPU architecture
+      assert:
+        that:
+          - "pull_arch2 is changed"
+
+    - name: Get the image info
+      containers.podman.podman_image_info:
+        executable: "{{ test_executable | default('podman') }}"
+        name: docker.io/library/ubuntu
+      register: imageinfo_arch
+
+    - name: Ensure the CPU architecture of the image is as expected
+      assert:
+        that:
+          - item.Architecture == "arm"
+      loop: "{{ imageinfo_arch.images }}"
+
   always:
     - name: Cleanup images
       containers.podman.podman_image:
@@ -272,6 +303,7 @@
         name: "{{ item }}"
         state: absent
       loop:
+        - docker.io/library/ubuntu
         - quay.io/coreos/alpine-sh
         - quay.io/coreos/etcd:v3.3.11
         - localhost/testimage
