--- a/tests/integration/targets/podman_play/tasks/main.yml
+++ b/tests/integration/targets/podman_play/tasks/main.yml
@@ -99,7 +99,7 @@
     - name: Check if pod is running well
       containers.podman.podman_pod_info:
         executable: "{{ test_executable | default('podman') }}"
-        name: web-deploy-pod-0
+        name: web-deploy-pod
       register: info1
 
     - name: Check pod info
