--- a/.github/workflows/podman_container.yml
+++ b/.github/workflows/podman_container.yml
@@ -46,13 +46,13 @@ jobs:
         os:
           - ubuntu-22.04
         python-version:
-          - 3.9
+          - "3.10"
         podman-version:
           - unstable
         include:
           - os: ubuntu-22.04
             ansible-version: git+https://github.com/ansible/ansible.git@stable-2.15
-            python-version: 3.9
+            python-version: "3.10"
             podman-version: stable
 
     steps:
