Fix test code for podman_generate_systemd
Signed-off-by: nishipy <goodisonev4@gmail.com>

--- a/tests/integration/targets/podman_generate_systemd/tasks/main.yml
+++ b/tests/integration/targets/podman_generate_systemd/tasks/main.yml
@@ -60,7 +60,7 @@
   containers.podman.podman_generate_systemd:
     name: postgres_local
     dest: /tmp/podman_generate_systemd
-    #force: true
+    force: true
   register: generate2
 
 - name: Check the unit files exists again
