Rename master branch to main
Signed-off-by: nishipy <goodisonev4@gmail.com>

--- a/.github/workflows/podman_network.yml
+++ b/.github/workflows/podman_network.yml
@@ -11,7 +11,7 @@ on:
       - 'plugins/module_utils/podman/quadlet.py'
       - 'tests/integration/targets/podman_network/**'
     branches:
-      - master
+      - main
   pull_request:
     paths:
       - '.github/workflows/podman_network.yml'
