--- a/.github/workflows/podman_pod.yml
+++ b/.github/workflows/podman_pod.yml
@@ -14,7 +14,7 @@ on:
       - 'plugins/modules/podman_pod_info.py'
       - 'tests/integration/targets/podman_pod/**'
     branches:
-      - master
+      - main
   pull_request:
     paths:
       - '.github/workflows/podman_pod.yml'
