--- a/.github/workflows/podman_container.yml
+++ b/.github/workflows/podman_container.yml
@@ -14,7 +14,7 @@ on:
       - 'plugins/modules/podman_container_info.py'
       - 'tests/integration/targets/podman_container/**'
     branches:
-      - master
+      - main
   pull_request:
     paths:
       - '.github/workflows/podman_container.yml'
