--- a/.github/workflows/podman_play.yml
+++ b/.github/workflows/podman_play.yml
@@ -11,7 +11,7 @@ on:
       - 'plugins/module_utils/podman/quadlet.py'
       - 'tests/integration/targets/podman_play/**'
     branches:
-      - master
+      - main
   pull_request:
     paths:
       - '.github/workflows/podman_play.yml'
