--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -429,7 +429,7 @@ releases:
       - Don't add newlines to secrets
       - Fix issue with podman and exposed ports
       - Fix signal diff for truncated and RT signal names
-      - Support empty stings in prefixes
+      - Support empty strings in prefixes
       - Update error message when pull set to false
       release_summary: Fixes for various modules
     release_date: '2021-11-09'
