Add test for kube_play with image build
Signed-off-by: nishipy <goodisonev4@gmail.com>

--- a/tests/integration/targets/podman_play/tasks/main.yml
+++ b/tests/integration/targets/podman_play/tasks/main.yml
@@ -128,3 +128,9 @@
   args:
     apply:
       become: true
+
+- name: Test play kube with on-demand image build
+  include_tasks: play-with-build.yml
+  vars:
+    ansible_python_interpreter: "/usr/bin/python"
+    
