--- a/tests/integration/targets/podman_play/tasks/play-with-build.yml
+++ b/tests/integration/targets/podman_play/tasks/play-with-build.yml
@@ -1,3 +1,4 @@
+---
 - name: Test play kube with on-demand image build
   vars:
     image_name: build-test
@@ -6,41 +7,41 @@
     success_msg: "Successfully tagged localhost/{{ image_name }}:latest"
   block:
 
-  - name: Make sure that "{{ image_name }}" image is absent
-    containers.podman.podman_image:
-      name: "{{ image_name }}"
-      state: absent
+    - name: Make sure that {{ image_name }} image is absent
+      containers.podman.podman_image:
+        name: "{{ image_name }}"
+        state: absent
 
-  - name: Copy files to known place
-    copy:
-      src: kube-buil-test.yaml
-      dest: "{{ kube_dir }}/kube-buil-test.yaml"
-      remote_src: false
+    - name: Copy files to known place
+      copy:
+        src: kube-buil-test.yaml
+        dest: "{{ kube_dir }}/kube-buil-test.yaml"
+        remote_src: false
 
-  - name: Create context dir for build
-    file: 
-      path: "{{ build_context_dir }}/{{ image_name }}"
-      state: directory
+    - name: Create context dir for build
+      file:
+        path: "{{ build_context_dir }}/{{ image_name }}"
+        state: directory
 
-  - name: Copy Containerfile for build
-    copy:
-      src: Containerfile
-      dest: "{{ build_context_dir }}/{{ image_name }}/Containerfile"
-      remote_src: false
-  
-  - name: Play kube file with image build
-    containers.podman.podman_play:
-      kube_file: "{{ kube_dir }}/kube-buil-test.yaml"
-      build: true
-      context_dir: "{{ build_context_dir }}"
-      state: started
-    register: play_with_build
+    - name: Copy Containerfile for build
+      copy:
+        src: Containerfile
+        dest: "{{ build_context_dir }}/{{ image_name }}/Containerfile"
+        remote_src: false
 
-  - name: Check if the result is changed
-    assert:
-      that:
-        - play_with_build is changed
-        - success_msg in play_with_build.stdout
+    - name: Play kube file with image build
+      containers.podman.podman_play:
+        kube_file: "{{ kube_dir }}/kube-buil-test.yaml"
+        build: true
+        context_dir: "{{ build_context_dir }}"
+        state: started
+      register: play_with_build
+
+    - name: Check if the result is changed
+      assert:
+        that:
+          - play_with_build is changed
+          - success_msg in play_with_build.stdout
 
   always:
 
